# CalendarByFeniro

./: readme.md
client/: .gitignore  CMakeLists.txt  DayEdit.qml  DayModel.qml  DocumentListModel.qml  LoadMenu.qml  Main.qml  main.cpp  main.qml  vcpkg.json
client/img/: Каменская-1 серии 1-8 из 8 (Юрий Мороз) [1999-2000, детектив, DVDRip] [rutracker-444601].torrent
client/inc/: appState.h  asioWorker.h  date.h  dayData.h  dayDataHandler.h  dayItem.h  dayModel.h  networkManager.h  notificationHandler.h  requestHandler.h  webSocketClient.h  webSocketWorker.h
client/qml/: Connect.qml  DayEdit.qml  DayModel.qml  DialogShare.qml  DocumentListModel.qml  LoadMenu.qml  Main.qml  Menu.qml  ServerIpEnter.qml  UserListModel.qml
client/qml/models/: DayModel.qml  DocumentListModel.qml  UserListModel.qml
client/src/: appState.cpp  date.cpp  dayData.cpp  dayDataHandler.cpp  dayItem.cpp  dayModel.cpp  notificationHandler.cpp  requestHandler.cpp  webSocketClient.cpp  webSocketWorker.cpp
server/: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
server/inc/: documentHandler.h  fileWatcher.h  postgresql.h  resourceManager.h  sessionWatcher.h  webServerSocket.h
server/src/: documentHandler.cpp  fileWatcher.cpp  postgresql.cpp  resourceManager.cpp  sessionWatcher.cpp  webServerSocket.cpp
